--- a/po/nl.po
+++ b/po/nl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eyedropper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-21 14:09+0100\n"
-"PO-Revision-Date: 2022-11-16 14:33+0100\n"
+"POT-Creation-Date: 2022-12-18 11:58+0100\n"
+"PO-Revision-Date: 2022-12-18 12:39+0100\n"
 "Last-Translator: Philip Goto <philip.goto@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
-#: data/resources/ui/window.ui:88 src/widgets/about_window.rs:44
+#: data/resources/ui/window.ui:88 src/main.rs:25 src/widgets/about_window.rs:44
 msgid "Eyedropper"
 msgstr "Eyedropper"
 
@@ -228,6 +228,96 @@ msgstr "Licentie toegevoegd"
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:115
 msgid "FineFindus"
 msgstr "FineFindus"
+
+#: data/resources/ui/shortcuts.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr "Algemeen"
+
+#: data/resources/ui/shortcuts.ui:14
+msgctxt "shortcut window"
+msgid "Show Preferences"
+msgstr "Voorkeuren tonen"
+
+#: data/resources/ui/shortcuts.ui:20
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "Sneltoetsen tonen"
+
+#: data/resources/ui/shortcuts.ui:26
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "Afsluiten"
+
+#: data/resources/ui/shortcuts.ui:34
+msgctxt "shortcut window"
+msgid "Color"
+msgstr "Kleur"
+
+#: data/resources/ui/shortcuts.ui:37
+msgctxt "shortcut window"
+msgid "Pick a new Color"
+msgstr "Nieuwe kleur kiezen"
+
+#: data/resources/ui/shortcuts.ui:43
+msgctxt "shortcut window"
+msgid "Randomize the Color"
+msgstr "Willekeurige kleur kiezen"
+
+#: data/resources/ui/palette-window.ui:5
+msgid "Palettes"
+msgstr "Paletten"
+
+#: data/resources/ui/palette-window.ui:16
+msgid "Save Palettes"
+msgstr "Paletten opslaan"
+
+#: data/resources/ui/window.ui:6
+msgid "_Clear History"
+msgstr "_Geschiedenis wissen"
+
+#: data/resources/ui/window.ui:10
+msgid "_Random Color"
+msgstr "_Willekeurige kleur"
+
+#: data/resources/ui/window.ui:16
+msgid "_Preferences"
+msgstr "_Voorkeuren"
+
+#: data/resources/ui/window.ui:20
+msgid "_Keyboard Shortcuts"
+msgstr "_Sneltoetsen"
+
+#: data/resources/ui/window.ui:24
+msgid "_About Eyedropper"
+msgstr "_Over Eyedropper"
+
+#: data/resources/ui/window.ui:54
+msgid "No Color"
+msgstr "Geen kleur"
+
+#: data/resources/ui/window.ui:55
+msgid "Select a color from the screen to get started."
+msgstr "Kies een kleur op het scherm om te beginnen."
+
+#: data/resources/ui/window.ui:58
+msgid "_Pick a Color"
+msgstr "_Kies een kleur"
+
+#: data/resources/ui/window.ui:93
+msgctxt "Tooltip of the colorpicker button"
+msgid "Pick a Color"
+msgstr "Kleur kiezen"
+
+#: data/resources/ui/window.ui:125
+msgctxt "Tooltip of the palette button"
+msgid "Open Palette Window"
+msgstr "Paletvenster openen"
+
+#: data/resources/ui/color-format-row.ui:22
+msgctxt "Tooltip of the copy button for format rows"
+msgid "Copy Format"
+msgstr "Formaat kopiëren"
 
 #: data/resources/ui/preferences.ui:10
 msgid "General"
@@ -444,90 +534,166 @@ msgctxt " Tooltip of the button to reset the format order"
 msgid "Reset Order"
 msgstr "Volgorde resetten"
 
-#: data/resources/ui/color-format-row.ui:22
-msgctxt "Tooltip of the copy button for format rows"
-msgid "Copy Format"
-msgstr "Formaat kopiëren"
+#: data/resources/ui/preferences.ui:168 data/resources/ui/preferences.ui:171
+msgid "Formats"
+msgstr "Formaten"
 
-#: data/resources/ui/shortcuts.ui:11
-msgctxt "shortcut window"
-msgid "General"
-msgstr "Algemeen"
+#: data/resources/ui/preferences.ui:172
+msgid ""
+"Edit how the color formats are displayed. The “{}” will be replaced in with "
+"the values of the formats."
+msgstr ""
+"Bewerk hoe de formaten worden weergegeven. De ‘{}’ zal worden vervangen door "
+"de waarden van de formaten."
 
-#: data/resources/ui/shortcuts.ui:14
-msgctxt "shortcut window"
-msgid "Show Preferences"
-msgstr "Voorkeuren tonen"
+#: data/resources/ui/preferences.ui:175
+msgid "RGB Format"
+msgstr "RGB-formaat"
 
-#: data/resources/ui/shortcuts.ui:20
-msgctxt "shortcut window"
-msgid "Show Shortcuts"
-msgstr "Sneltoetsen tonen"
+#: data/resources/ui/preferences.ui:182
+msgid "HSL Format"
+msgstr "HSL-formaat"
 
-#: data/resources/ui/shortcuts.ui:26
-msgctxt "shortcut window"
-msgid "Quit"
-msgstr "Afsluiten"
+#: data/resources/ui/preferences.ui:189
+msgid "HSV Format"
+msgstr "HSV-/KVW-formaat"
 
-#: data/resources/ui/shortcuts.ui:34
-msgctxt "shortcut window"
-msgid "Color"
-msgstr "Kleur"
+#: data/resources/ui/preferences.ui:196
+msgid "CMYK Format"
+msgstr "CMYK-formaat"
 
-#: data/resources/ui/shortcuts.ui:37
-msgctxt "shortcut window"
-msgid "Pick a new Color"
-msgstr "Nieuwe kleur kiezen"
+#: data/resources/ui/preferences.ui:203
+msgid "XYZ Format"
+msgstr "XYZ-formaat"
 
-#: data/resources/ui/shortcuts.ui:43
-msgctxt "shortcut window"
-msgid "Randomize the Color"
-msgstr "Willekeurige kleur kiezen"
+#: data/resources/ui/preferences.ui:210
+msgid "CIELAB Format"
+msgstr "CIELAB-formaat"
 
-#: data/resources/ui/palette-window.ui:5
-msgid "Palettes"
-msgstr "Paletten"
+#: data/resources/ui/preferences.ui:217
+msgid "HWB Format"
+msgstr "HWB-formaat"
 
-#: data/resources/ui/palette-window.ui:16
-msgid "Save Palettes"
-msgstr "Paletten opslaan"
+#: data/resources/ui/preferences.ui:224
+msgid "CIELCh/HCL Format"
+msgstr "CIELCh-/HCL-formaat"
 
-#: data/resources/ui/window.ui:6
-msgid "_Clear History"
-msgstr "_Geschiedenis wissen"
+#: data/resources/ui/preferences.ui:231
+msgid "LMS Format"
+msgstr "LMS-formaat"
 
-#: data/resources/ui/window.ui:10
-msgid "_Random Color"
-msgstr "_Willekeurige kleur"
+#: data/resources/ui/preferences.ui:238
+msgid "Hunter Lab Format"
+msgstr "Hunter-Lab-formaat"
 
-#: data/resources/ui/window.ui:16
-msgid "_Preferences"
-msgstr "_Voorkeuren"
+#: data/resources/ui/preferences/custom-format-row.ui:10
+msgctxt "Tooltip of the reset button for custom format"
+msgid "Reset Format"
+msgstr "Formaat resetten"
 
-#: data/resources/ui/window.ui:20
-msgid "_Keyboard Shortcuts"
-msgstr "_Sneltoetsen"
+#: src/widgets/preferences_window.rs:168
+msgctxt ""
+"Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
+"#html4"
+msgid "Basic"
+msgstr "Basis"
 
-#: data/resources/ui/window.ui:24
-msgid "_About Eyedropper"
-msgstr "_Over Eyedropper"
+#: src/widgets/preferences_window.rs:170
+msgid "Show color names from the w3c basic color keyword set"
+msgstr "Geeft kleurnamen weer van de basis-W3C-kleurenset"
 
-#: data/resources/ui/window.ui:54
-msgid "No Color"
-msgstr "Geen kleur"
+#: src/widgets/preferences_window.rs:176
+msgctxt ""
+"Name of the extended color keyword set from https://www.w3.org/TR/css-"
+"color-3/#svg-color"
+msgid "Extended"
+msgstr "Uitgebreid"
 
-#: data/resources/ui/window.ui:55
-msgid "Select a color from the screen to get started."
-msgstr "Kies een kleur op het scherm om te beginnen."
+#: src/widgets/preferences_window.rs:178
+msgid "Show color names from the w3c extended color keyword  set"
+msgstr "Geeft kleurnamen weer van de uitgebruide W3C-kleurenset"
 
-#: data/resources/ui/window.ui:58
-msgid "_Pick a Color"
-msgstr "_Kies een kleur"
+#: src/widgets/preferences_window.rs:182
+msgctxt ""
+"Name of the color set from the GNOME color palette (https://developer.gnome."
+"org/hig/reference/palette.html)"
+msgid "GNOME color palette"
+msgstr "GNOME-kleurenpalet"
 
-#: data/resources/ui/window.ui:93
-msgctxt "Tooltip of the colorpicker button"
-msgid "Pick a Color"
-msgstr "Kleur kiezen"
+#: src/widgets/preferences_window.rs:183
+msgid "Show color names from the GNOME color palette"
+msgstr "Geeft kleurnamen weer van het GNOME-kleurenpalet"
+
+#: src/widgets/preferences_window.rs:187
+msgctxt "Name of the color set from the xkcd color survey"
+msgid "xkcd"
+msgstr "xkcd"
+
+#: src/widgets/preferences_window.rs:188
+msgid "Show color names from the xkcd color survey"
+msgstr "Geeft kleurnamen weer van de xkcd-kleurenenquête"
+
+#: src/widgets/preferences_window.rs:327
+msgid "Move Up"
+msgstr "Naar boven verplaatsen"
+
+#: src/widgets/preferences_window.rs:329
+msgid "Move Down"
+msgstr "Naar beneden verplaatsen"
+
+#: src/widgets/preferences_window.rs:452
+msgid "Hex-Code"
+msgstr "Hex-code"
+
+#: src/widgets/preferences_window.rs:457
+msgid "RGB"
+msgstr "RGB"
+
+#: src/widgets/preferences_window.rs:460
+msgid "HSL"
+msgstr "HSL"
+
+#: src/widgets/preferences_window.rs:463
+msgid "HSV"
+msgstr "HSV/KVW"
+
+#: src/widgets/preferences_window.rs:467
+msgid "CMYK"
+msgstr "CMYK"
+
+#: src/widgets/preferences_window.rs:472
+msgid "XYZ"
+msgstr "XYZ"
+
+#: src/widgets/preferences_window.rs:476
+msgid "CIELAB"
+msgstr "CIELAB"
+
+#: src/widgets/preferences_window.rs:481
+msgid "HWB"
+msgstr "HWB"
+
+#: src/widgets/preferences_window.rs:485
+msgid "CIELCh / HCL"
+msgstr "CIELCh/HCL"
+
+#: src/widgets/preferences_window.rs:491
+msgid "Name"
+msgstr "Naam"
+
+#: src/widgets/preferences_window.rs:494 src/window.rs:397 src/window.rs:420
+#: src/window.rs:580 src/window.rs:651
+msgctxt "Information that no name for the color could be found"
+msgid "Not named"
+msgstr "Geen naam beschikbaar"
+
+#: src/widgets/preferences_window.rs:499
+msgid "LMS"
+msgstr "LMS"
+
+#: src/widgets/preferences_window.rs:503
+msgid "Hunter Lab"
+msgstr "Hunter-Lab"
 
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:50
@@ -541,22 +707,20 @@ msgctxt ""
 "closing tag. Since xgettext does not recognize rust multiline strings, this "
 "should be on a single line using line breaks (\\n) for new lines."
 msgid ""
-"<p>This release extends the current available features.</p><p> Features:</"
-"p>\n"
-"<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
-"color survey, can now be shown</li><li>Switch the color by entering a color "
-"keyword</li><li> A new Palette dialog showing different color palettes</"
-"li><li>Choose which CIE standard observer is used, as well as it's "
-"illuminant</li><li> Show the CIELCh color format</li><li> Using the new "
-"AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor issues</"
-"li></ul>"
+"<p>A new release with exciting new features.</p><p>New Features:</p>\n"
+"<ul><li>Customize formats in the settings</li><li>Export the colorscheme as "
+"a GIMP palette using the new export option</li><li>A placeholder is shown "
+"when no color is picked</li><li> Hunter-Lab and LMS color spaces have been "
+"added</li><li>The GNOME color palette has been added</li><li>Fixed minor "
+"issues</li></ul>"
 msgstr ""
-"<p>Deze uitgave breidt uit op de huidige functies.</p><p>Functies:</p>\n"
-"<ul><li>De naam van de kleur, gespecificeerd door W3C-kleurennamen en de "
-"xkcd-kleurenenquête, kan nu getoond worden</li><li>Wissel van kleur door een "
-"kleurennaam in te voeren</li><li>Een nieuw paletdiaoog welke verschillende "
-"kleurenpaletten toont</li><li>Gebruikt de nieuwe AdwAboutWindow</"
-"li><li>Nieuwe vertalingen</li><li>Kleine foutopllossingen</li></ul>"
+"<p>Een nieuwe uitgave met spannende nieuwe functies.</p><p>Nieuwe functies:</"
+"p>\n"
+"<ul><li>Pas formaten aan onder instellingen</li><li>Exporteer het "
+"kleurenschema als GIMP-palet gebruikmakend van de nieuwe exporteeroptie</"
+"li><li>Een plaatshouder wordt getoond wanneer geen kleur is gekozen</"
+"li><li>De kleurenruimtes Hunter-Lab en LMS zijn toegevoegd</li><li>Het GNOME-"
+"kleurenpalet is toegevoegd</li><li>Kleine foutoplossingen toegepast</li></ul>"
 
 #: src/widgets/palette_dialog.rs:122
 msgctxt "Name for tints (lighter variants) of the color"
@@ -596,124 +760,49 @@ msgctxt "Color palette consisting of six slight shifted colors"
 msgid "Analogous"
 msgstr "Harmonisch"
 
-#: src/widgets/palette_dialog.rs:257
+#: src/widgets/palette_dialog.rs:259
 msgctxt ""
 "Name of the save palette file, do not add a file extension, .gpl will be "
 "added automatically"
 msgid "palettes"
 msgstr "paletten"
 
-#: src/widgets/preferences.rs:167
-msgctxt ""
-"Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
-"#html4"
-msgid "Basic"
-msgstr "Basis"
+#: src/window.rs:493
+msgid "Failed to get palette color"
+msgstr "Paletkleur verkrijgen mislukt"
 
-#: src/widgets/preferences.rs:169
-msgid "Show color names from the w3c basic color keyword set"
-msgstr "Geeft kleurnamen weer van de basis-W3C-kleurenset"
+#: src/window.rs:514
+msgid "Failed to pick a color"
+msgstr "Kleur kiezen mislukt"
 
-#: src/widgets/preferences.rs:175
-msgctxt ""
-"Name of the extended color keyword set from https://www.w3.org/TR/css-"
-"color-3/#svg-color"
-msgid "Extended"
-msgstr "Uitgebreid"
+#. Translators: Do not replace the {}. These are used as placeholders for the copied values
+#: src/window.rs:597
+msgid "Copied: “{}”"
+msgstr "‘{}’ gekopieerd"
 
-#: src/widgets/preferences.rs:177
-msgid "Show color names from the w3c extended color keyword  set"
-msgstr "Geeft kleurnamen weer van de uitgebruide W3C-kleurenset"
-
-#: src/widgets/preferences.rs:181
-msgctxt ""
-"Name of the color set from the GNOME color palette (https://developer.gnome."
-"org/hig/reference/palette.html)"
-msgid "GNOME color palette"
-msgstr "GNOME-kleurenpalet"
-
-#: src/widgets/preferences.rs:182
-msgid "Show color names from the GNOME color palette"
-msgstr "Geeft kleurnamen weer van het GNOME-kleurenpalet"
-
-#: src/widgets/preferences.rs:186
-msgctxt "Name of the color set from the xkcd color survey"
-msgid "xkcd"
-msgstr "xkcd"
-
-#: src/widgets/preferences.rs:187
-msgid "Show color names from the xkcd color survey"
-msgstr "Geeft kleurnamen weer van de xkcd-kleurenenquête"
-
-#: src/widgets/preferences.rs:326
-msgid "Move Up"
-msgstr "Naar boven verplaatsen"
-
-#: src/widgets/preferences.rs:328
-msgid "Move Down"
-msgstr "Naar beneden verplaatsen"
-
-#: src/widgets/preferences.rs:448
-msgid "Hex-Code"
-msgstr "Hex-code"
-
-#: src/widgets/preferences.rs:454
-msgid "RGB"
-msgstr "RGB"
-
-#: src/widgets/preferences.rs:460
-msgid "HSL"
-msgstr "HSL"
-
-#: src/widgets/preferences.rs:468
-msgid "HSV"
-msgstr "HSV (KVW)"
-
-#: src/widgets/preferences.rs:477
-msgid "CMYK"
-msgstr "CMYK"
-
-#: src/widgets/preferences.rs:486
-msgid "XYZ"
-msgstr "XYZ"
-
-#: src/widgets/preferences.rs:495
-msgid "CIELAB"
-msgstr "CIELAB"
-
-#: src/widgets/preferences.rs:507
-msgid "HWB"
-msgstr "HWB"
-
-#: src/widgets/preferences.rs:521
-msgid "CIELCh / HCL"
-msgstr "CIELCh / HCL"
-
-#: src/widgets/preferences.rs:528
-msgid "Name"
-msgstr "Naam"
-
-#: src/widgets/preferences.rs:531
-msgctxt "Information that no name for the color could be found"
-msgid "Not named"
-msgstr "Geen naam beschikbaar"
-
-#: src/widgets/preferences.rs:539
-msgid "LMS"
-msgstr "LMS"
-
-#: src/widgets/preferences.rs:548
-msgid "Hunter Lab"
-msgstr "Hunter Lab"
-
-#~ msgid "Failed to get palette color"
-#~ msgstr "Paletkleur verkrijgen mislukt"
-
-#~ msgid "Failed to pick a color"
-#~ msgstr "Kleur kiezen mislukt"
-
-#~ msgid "Copied: “{}”"
-#~ msgstr "‘{}’ gekopieerd"
+#~ msgctxt ""
+#~ "The changelog of the current version. Should be similar to the CHANGELOG."
+#~ "md file at the project root. Please ensure that the tags have a matching "
+#~ "closing tag. Since xgettext does not recognize rust multiline strings, "
+#~ "this should be on a single line using line breaks (\\n) for new lines."
+#~ msgid ""
+#~ "<p>This release extends the current available features.</p><p> Features:</"
+#~ "p>\n"
+#~ "<ul><li> The name of the color, specified by w3c color keywords and the "
+#~ "xkcd color survey, can now be shown</li><li>Switch the color by entering "
+#~ "a color keyword</li><li> A new Palette dialog showing different color "
+#~ "palettes</li><li>Choose which CIE standard observer is used, as well as "
+#~ "it's illuminant</li><li> Show the CIELCh color format</li><li> Using the "
+#~ "new AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor "
+#~ "issues</li></ul>"
+#~ msgstr ""
+#~ "<p>Deze uitgave breidt uit op de huidige functies.</p><p>Functies:</p>\n"
+#~ "<ul><li>De naam van de kleur, gespecificeerd door W3C-kleurennamen en de "
+#~ "xkcd-kleurenenquête, kan nu getoond worden</li><li>Wissel van kleur door "
+#~ "een kleurennaam in te voeren</li><li>Een nieuw paletdiaoog welke "
+#~ "verschillende kleurenpaletten toont</li><li>Gebruikt de nieuwe "
+#~ "AdwAboutWindow</li><li>Nieuwe vertalingen</li><li>Kleine "
+#~ "foutopllossingen</li></ul>"
 
 #~ msgctxt "Tooltip of the copy button for the hex format"
 #~ msgid "Copy Format"
