feat(translation/de): update translation

--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
-"POT-Creation-Date: 2023-02-21 19:58+0000\n"
-"PO-Revision-Date: 2023-02-21 21:41+0100\n"
+"POT-Creation-Date: 2023-02-21 20:22+0000\n"
+"PO-Revision-Date: 2023-02-21 21:43+0100\n"
 "Last-Translator: FineFindus <FineFindusGH@gmail.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -668,7 +668,7 @@ msgctxt ""
 msgid ""
 "<p>A minor release with many small QoL improvements.</p><p>Added:</p>\n"
 "<ul><li>Show a toast with an Undo option when clearing the history</"
-"li><li>Use Ctrl-Q to close the window</li><li>Use a default minium window "
+"li><li>Use Ctrl-Q to close the window</li><li>Use a default minimum window "
 "size, content should no longer unnecessarily cut off</li><li>New icon by "
 "@bertob</li><li>Export palettes as Adobe Swatch Exchange (ASE), hex, PAL, "
 "Paint.NET (txt) files</li><li>Minor changes to the store metadata</li></"
@@ -680,21 +680,37 @@ msgid ""
 "<ul><li>Separator is now hidden when the history list is hidden</"
 "li><li>Improved editing experience when change the Hex color/name</li></ul>"
 msgstr ""
-"<p>Eine kleinere Version mit vielen Qualitätsverbesserungen.</"
-"p><p>Hinzugefügt:</p>\n"
-"<ul><li>Zeige eine Option zum rückgängig machen nach dem Löschen des "
-"Verlaufs</li><li>Nutze Ctrl-Q, um das Fenster zu schließen</li><li>Minimum "
-"Fenstergröße, sodass der Inhalt hineinpasst</li><li>Neues Icon von @bertob</"
-"li><li>Exportiere Farbpaletten als Adobe Swatch Exchange (ASE), hex, PAL, "
-"Paint.NET (txt) Dateien</li><li>Kleinere Änderungen an der Store Metadata</"
-"li></ul><p>Geändert:</p>\n"
-"<ul><li>Hunter-Lab zeigt nun 0 statt NaN an</li><li>Verbesserte "
-"Hilfestellungen beim Kopieren von Farben</li><li>Palettenfenster nutzt nun "
-"einem Textknopf statt eines Icons</li><li>Umformulierte Projektbeschreibung</"
-"li><li>Screenshots wurden überarbeitet</li></ul><p>Verbessert:</p>\n"
-"<ul><li>Trennung von dem Verlauf wird nur angezeigt, wenn der Verlauf "
-"sichtbar ist</li><li>Verbesserte Erfahrung, wenn Hex/Namensfelder bearbeitet "
-"werden</li></ul>"
+"msgctxt \"The changelog of the current \n"
+"version. Should be similar to the \n"
+"CHANGELOG.md file at the project root. \n"
+"Please ensure that the tags have a \n"
+"matching closing tag. Since xgettext does \n"
+"not recognize rust multiline strings, this \n"
+"should be on a single line using line breaks \n"
+"(\\n) for new lines.<p>A minor release with \n"
+"many small QoL improvements.</\n"
+"p><p>Added:</p>\n"
+"<ul><li>Show a toast with an Undo option \n"
+"when clearing the history</li><li>Use Ctrl-\n"
+"Q to close the window</li><li>Use a \n"
+"default minium window size, content \n"
+"should no longer unnecessarily cut off</\n"
+"li><li>New icon by @bertob</\n"
+"li><li>Export palettes as Adobe Swatch \n"
+"Exchange (ASE), hex, PAL, Paint.NET (txt) \n"
+"files</li><li>Minor changes to the store \n"
+"metadata</li></ul><p>Changed:</p>\n"
+"<ul><li>Hunter-Lab now displays 0 \n"
+"instead of NaN</li><li>Improved tooltips \n"
+"for copying colors</li><li>Palette window \n"
+"now uses a button with a more explicit text \n"
+"instead of an icon</li><li>Reworded \n"
+"project description</li><li>Updated all \n"
+"screenshots</li></ul><p>Fixed:</p>\n"
+"<ul><li>Separator is now hidden when the \n"
+"history list is hidden</li><li>Improved \n"
+"editing experience when change the Hex \n"
+"color/name</li></ul>"
 
 #: src/window.rs:213
 msgid "Cleared history"
