--- a/po/ru.po
+++ b/po/ru.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
-"POT-Creation-Date: 2023-02-19 19:12+0000\n"
-"PO-Revision-Date: 2023-02-21 19:56+0300\n"
+"POT-Creation-Date: 2023-02-21 19:58+0000\n"
+"PO-Revision-Date: 2023-02-22 00:00+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -640,8 +640,8 @@ msgstr "CIELCh / HCL"
 msgid "Name"
 msgstr "Название"
 
-#: src/widgets/preferences_window.rs:495 src/window.rs:413 src/window.rs:436
-#: src/window.rs:611 src/window.rs:682
+#: src/widgets/preferences_window.rs:495 src/window.rs:432 src/window.rs:455
+#: src/window.rs:630 src/window.rs:701
 msgctxt "Information that no name for the color could be found"
 msgid "Not named"
 msgstr "Без названия"
@@ -668,33 +668,78 @@ msgctxt ""
 "closing tag. Since xgettext does not recognize rust multiline strings, this "
 "should be on a single line using line breaks (\\n) for new lines."
 msgid ""
-"<p>A new release with exciting new features.</p><p>New Features:</p>\n"
-"<ul><li>Customize formats in the settings</li><li>Export the colorscheme as "
-"a GIMP palette using the new export option</li><li>A placeholder is shown "
-"when no color is picked</li><li> Hunter-Lab and LMS color spaces have been "
-"added</li><li>The GNOME color palette has been added</li><li>Fixed minor "
-"issues</li></ul>"
+"<p>A minor release with many small QoL improvements.</p><p>Added:</p>\n"
+"<ul><li>Show a toast with an Undo option when clearing the history</"
+"li><li>Use Ctrl-Q to close the window</li><li>Use a default minium window "
+"size, content should no longer unnecessarily cut off</li><li>New icon by "
+"@bertob</li><li>Export palettes as Adobe Swatch Exchange (ASE), hex, PAL, "
+"Paint.NET (txt) files</li><li>Minor changes to the store metadata</li></"
+"ul><p>Changed:</p>\n"
+"<ul><li>Hunter-Lab now displays 0 instead of NaN</li><li>Improved tooltips "
+"for copying colors</li><li>Palette window now uses a button with a more "
+"explicit text instead of an icon</li><li>Reworded project description</"
+"li><li>Updated all screenshots</li></ul><p>Fixed:</p>\n"
+"<ul><li>Separator is now hidden when the history list is hidden</"
+"li><li>Improved editing experience when change the Hex color/name</li></ul>"
 msgstr ""
-"<p>Новый релиз с новыми захватывающими возможностями.</p><p>Новые "
-"возможности:</p>\n"
-"<ul><li>Настройка цветовых форматов</li><li>Экспорт цветовой схемы в виде "
-"палитры GIMP, используя новый параметр экспорта.</li><li>Если цвет не "
-"выбран, отображается заполнитель.</li><li>Добавлены цветовые пространства "
-"Hunter-Lab и LMS.</li><li>Добавлена цветовая палитра GNOME</"
-"li><li>Исправлены незначительные проблемы</li></ul>"
+"<p>Незначительный выпуск с множеством небольших улучшений качества жизни.</"
+"p><p>Добавлено:</p>\n"
+"<ul><li>Отображение всплывающего уведомления с опцией \"Отменить\" при "
+"очистке истории</li><li>Использование Ctrl-Q для закрытия окна</"
+"li><li>Использование минимального размер окна по умолчанию, содержимое "
+"больше не должно обрезаться без необходимости</li><li>Новая иконка от "
+"@bertob</li><li>Экспорт палитр в виде файлов Adobe Swatch Exchange (ASE), "
+"hex, PAL, Paint.NET (txt)</li><li>Небольшие изменения в метаданных хранения</"
+"li></ul><p>Изменено:</p>\n"
+"<ul><li>Hunter-Lab теперь отображает 0 вместо NaN</li><li>Улучшенные "
+"всплывающие подсказки для копирования цветов</li><li>Окно палитры теперь "
+"использует кнопку с более подробным текстом вместо иконки.</"
+"li><li>Переформулировано описание проекта</li><li>Обновлены все снимки "
+"экрана</li></ul><p>Исправлено:</p>\n"
+"<ul><li>Разделитель теперь скрыт, когда список истории скрыт</li><li>Улучшен "
+"опыт редактирования при изменении цвета/имени Hex</li></ul>"
 
-#: src/window.rs:509
+#: src/window.rs:213
+msgid "Cleared history"
+msgstr "История очищена"
+
+#: src/window.rs:214
+msgid "Undo"
+msgstr "Отменить"
+
+#: src/window.rs:528
 msgid "Failed to get palette color"
 msgstr "Не удалось получить цвет палитры"
 
-#: src/window.rs:533
+#: src/window.rs:552
 msgid "Failed to pick a color"
 msgstr "Не удалось выбрать цвет"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:628
+#: src/window.rs:647
 msgid "Copied: “{}”"
 msgstr "Скопировано: “{}”"
+
+#~ msgctxt ""
+#~ "The changelog of the current version. Should be similar to the CHANGELOG."
+#~ "md file at the project root. Please ensure that the tags have a matching "
+#~ "closing tag. Since xgettext does not recognize rust multiline strings, "
+#~ "this should be on a single line using line breaks (\\n) for new lines."
+#~ msgid ""
+#~ "<p>A new release with exciting new features.</p><p>New Features:</p>\n"
+#~ "<ul><li>Customize formats in the settings</li><li>Export the colorscheme "
+#~ "as a GIMP palette using the new export option</li><li>A placeholder is "
+#~ "shown when no color is picked</li><li> Hunter-Lab and LMS color spaces "
+#~ "have been added</li><li>The GNOME color palette has been added</"
+#~ "li><li>Fixed minor issues</li></ul>"
+#~ msgstr ""
+#~ "<p>Новый релиз с новыми захватывающими возможностями.</p><p>Новые "
+#~ "возможности:</p>\n"
+#~ "<ul><li>Настройка цветовых форматов</li><li>Экспорт цветовой схемы в виде "
+#~ "палитры GIMP, используя новый параметр экспорта.</li><li>Если цвет не "
+#~ "выбран, отображается заполнитель.</li><li>Добавлены цветовые пространства "
+#~ "Hunter-Lab и LMS.</li><li>Добавлена цветовая палитра GNOME</"
+#~ "li><li>Исправлены незначительные проблемы</li></ul>"
 
 #~ msgid "A powerful color picker and formatter"
 #~ msgstr "Мощный инструмент для выбора цвета и средство форматирования"
